2009-01-08  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/Gio.metadata: change AppInfo's CanRemoveSupportsType to a
	property.

2009-01-08  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/Gio.metadata: change AppInfo's ShouldShow, SupportsFiles and 
	SupportsUris to properties.

2009-01-07  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBody.cs: avoid null ref when passing null to
	destroy notified callback parameters. [Fixes #464120]

2009-01-06  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: update to use mdoc.
	* doc/Makefile.am: update to use mdoc.
	* doc/gtk-sharp-docs.source: add node element to conform to new
	monodoc layout model.

2009-01-05  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* GType.cs: 
	* Value.cs: Revert r122505.
	[Reasoning on #448009]

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: fix gtk_icon_theme_lookup_by_gicon return-type 
	and name.

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: fix gicon property name for CellRendererPixbuf

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: fix gicon property, getter and setter for StatusIcon

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: rename SetFromGicon to SetFromIcon and GetGicon to
	GetIcon.

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: fix the gtk_image_get_gicon signature (pass as out)

2009-01-06  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata: rename the Gicon property of GtkImage to Icon.

2009-01-05  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* GType.cs: convert GType.Is to a non-static function.
	* Value.cs: track API.
	[Last cosmetic bit from #448009]

2009-01-05  Stephane Delcroix  <sdelcroix@novell.com>

	* bootstrap-2.14:
	* bootstrap-generic:
	* configure.in.in: depend on glib/gio 2.18

2009-01-04  Mike Kestner  <mkestner@novell.com>
