@@ -1,3 +1,12 @@
+2009-01-08  Mike Kestner  <mkestner@novell.com>
+
+	* generator/ReturnValue.cs: map gfilename* list elements to type
+	ListBase.FilenameString so they are marshaled correctly.
+	* glib/Marshaller.cs: handle FilenameStrings in ListPtrToArray.
+	* gtk/Gtk.metadata: FileChooser.GetFilenames and ListShortcutFolders
+	return type mangling to avoid custom implementations.
+	* gtk/FileChooser*.custom: kill manual Filenames and ShortcutFolders.
+
 2009-01-08  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* gio/Gio.metadata: change AppInfo's CanRemoveSupportsType to a
